[gd_scene load_steps=8 format=2]

[ext_resource path="res://AutoFence.gd" type="Script" id=1]
[ext_resource path="res://SECornerFence.tscn" type="PackedScene" id=2]
[ext_resource path="res://SWCornerFence.tscn" type="PackedScene" id=3]
[ext_resource path="res://NWCornerFence.tscn" type="PackedScene" id=4]
[ext_resource path="res://NECornerFence.tscn" type="PackedScene" id=5]
[ext_resource path="res://VerticalFence.tscn" type="PackedScene" id=6]
[ext_resource path="res://HorizontalFence.tscn" type="PackedScene" id=7]

[node name="AutoFence" type="Node2D"]
script = ExtResource( 1 )

[node name="SECornerFence" parent="." instance=ExtResource( 2 )]
position = Vector2( 404, 180 )

[node name="SWCornerFence" parent="." instance=ExtResource( 3 )]
position = Vector2( 404, 360 )

[node name="NWCornerFence" parent="." instance=ExtResource( 4 )]
position = Vector2( 202, 0 )

[node name="NECornerFence" parent="." instance=ExtResource( 5 )]

[node name="VerticalFence" parent="." instance=ExtResource( 6 )]
position = Vector2( 62, 0 )

[node name="HorizontalFence" parent="." instance=ExtResource( 7 )]

